web-map v1, combinedistricts notebook

--- a/CombineJurisdictions.ipynb
+++ b/CombineJurisdictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dc235dfe",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2818b12b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "e4163a92",
    "metadata": {},
    "outputs": [],
@@ -57,12 +57,14 @@
     "def read_zoning_file(filepath):\n",
     "    try:\n",
     "        # Read GIS file into dataframe\n",
+    "        \n",
     "        gdf = (gpd\n",
     "               .read_file(filepath)\n",
     "               .filter(['State', 'Jurisdiction', 'AbbreviatedDistrict', 'geometry'])\n",
     "               .dropna(subset=['geometry']) # remove null geometries\n",
     "               .to_crs('EPSG:4326') # set projection to WGS 84 (lat/lon)\n",
     "              )\n",
+    "        gdf.head()\n",
     "        \n",
     "        # Rename districts with no names to \"Not Zoned\"\n",
     "        gdf.AbbreviatedDistrict = gdf.AbbreviatedDistrict.fillna('Not Zoned')\n",
@@ -86,7 +88,7 @@
     "                              .sum()\n",
     "                             )\n",
     "\n",
-    "        # Combine (dissolve) geometries by zone\n",
+    "        # # Combine (dissolve) geometries by zone\n",
     "        gdf = gdf.dissolve(by='id')\n",
     "        gdf.ZoneAcres = total_area_by_zone # assign new total areas\n",
     "\n",
@@ -109,10 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "9f59a39d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error when reading geojson/FederalLandsDissolve.geojson.\n",
+      "Error when reading geojson/Great_Falls.geojson.\n",
+      "Error when reading geojson/MontanaBoundary.geojson.\n",
+      "Error when reading geojson/USAFederalLands_Montana.geojson.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -145,48 +157,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CT--ASHFORD--GC</td>\n",
-       "      <td>MULTIPOLYGON (((-72.17557 41.85615, -72.17603 ...</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>Ashford</td>\n",
-       "      <td>GC</td>\n",
-       "      <td>395.298754</td>\n",
+       "      <td>MT--BELGRADE--AS</td>\n",
+       "      <td>POLYGON ((-111.19625 45.77289, -111.19650 45.7...</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Belgrade</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>337.729046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CT--ASHFORD--IID</td>\n",
-       "      <td>MULTIPOLYGON (((-72.20179 41.95215, -72.20175 ...</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>Ashford</td>\n",
-       "      <td>IID</td>\n",
-       "      <td>131.844271</td>\n",
+       "      <td>MT--BELGRADE--B1</td>\n",
+       "      <td>POLYGON ((-111.20621 45.81668, -111.20621 45.8...</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Belgrade</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>40.907999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CT--ASHFORD--RA</td>\n",
-       "      <td>POLYGON ((-72.15121 41.95921, -72.15067 41.952...</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>Ashford</td>\n",
-       "      <td>RA</td>\n",
-       "      <td>24668.380675</td>\n",
+       "      <td>MT--BELGRADE--B2</td>\n",
+       "      <td>MULTIPOLYGON (((-111.16845 45.76275, -111.1673...</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Belgrade</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>876.041993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CT--ASHFORD--TD</td>\n",
-       "      <td>POLYGON ((-72.21205 41.85458, -72.21194 41.854...</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>Ashford</td>\n",
-       "      <td>TD</td>\n",
-       "      <td>281.457635</td>\n",
+       "      <td>MT--BELGRADE--B3</td>\n",
+       "      <td>MULTIPOLYGON (((-111.18118 45.77313, -111.1813...</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Belgrade</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>61.434842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CT--WINDSOR--A</td>\n",
-       "      <td>MULTIPOLYGON (((-72.68374 41.82462, -72.68373 ...</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>Windsor</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1071.007950</td>\n",
+       "      <td>MT--BELGRADE--BP</td>\n",
+       "      <td>POLYGON ((-111.18552 45.79672, -111.18552 45.7...</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Belgrade</td>\n",
+       "      <td>BP</td>\n",
+       "      <td>59.887856</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -194,31 +206,31 @@
       ],
       "text/plain": [
        "                 id                                           geometry State  \\\n",
-       "0   CT--ASHFORD--GC  MULTIPOLYGON (((-72.17557 41.85615, -72.17603 ...    CT   \n",
-       "1  CT--ASHFORD--IID  MULTIPOLYGON (((-72.20179 41.95215, -72.20175 ...    CT   \n",
-       "2   CT--ASHFORD--RA  POLYGON ((-72.15121 41.95921, -72.15067 41.952...    CT   \n",
-       "3   CT--ASHFORD--TD  POLYGON ((-72.21205 41.85458, -72.21194 41.854...    CT   \n",
-       "4    CT--WINDSOR--A  MULTIPOLYGON (((-72.68374 41.82462, -72.68373 ...    CT   \n",
+       "0  MT--BELGRADE--AS  POLYGON ((-111.19625 45.77289, -111.19650 45.7...    MT   \n",
+       "1  MT--BELGRADE--B1  POLYGON ((-111.20621 45.81668, -111.20621 45.8...    MT   \n",
+       "2  MT--BELGRADE--B2  MULTIPOLYGON (((-111.16845 45.76275, -111.1673...    MT   \n",
+       "3  MT--BELGRADE--B3  MULTIPOLYGON (((-111.18118 45.77313, -111.1813...    MT   \n",
+       "4  MT--BELGRADE--BP  POLYGON ((-111.18552 45.79672, -111.18552 45.7...    MT   \n",
        "\n",
-       "  Jurisdiction AbbreviatedDistrict     ZoneAcres  \n",
-       "0      Ashford                  GC    395.298754  \n",
-       "1      Ashford                 IID    131.844271  \n",
-       "2      Ashford                  RA  24668.380675  \n",
-       "3      Ashford                  TD    281.457635  \n",
-       "4      Windsor                   A   1071.007950  "
+       "  Jurisdiction AbbreviatedDistrict   ZoneAcres  \n",
+       "0     Belgrade                  AS  337.729046  \n",
+       "1     Belgrade                  B1   40.907999  \n",
+       "2     Belgrade                  B2  876.041993  \n",
+       "3     Belgrade                  B3   61.434842  \n",
+       "4     Belgrade                  BP   59.887856  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Folder with all GIS files\n",
-    "zoning_folder = './gis'\n",
+    "zoning_folder = 'geojson'\n",
     "\n",
     "# Read the folder to get all filenames (ignore hidden files)\n",
-    "zoning_files = [x for x in os.listdir(zoning_folder) if x[-5:] == '.gpkg' ]\n",
+    "zoning_files = [x for x in os.listdir(zoning_folder) if x[-8:] == '.geojson' ]\n",
     "\n",
     "# Read all zones into a single pandas dataframe\n",
     "gdfs = [ read_zoning_file(f\"{zoning_folder}/{filename}\")\n",
@@ -227,6 +239,62 @@
     "combined_df = pd.concat( gdfs ).reset_index(drop=True)\n",
     "\n",
     "combined_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5c523e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(552, 6)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "07bc607a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd_combined_df = pd.DataFrame(combined_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1ec30b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = combined_df.groupby('Jurisdiction').size()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "407c8790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the maximum number of rows and columns to display\n",
+    "pd.options.display.max_rows = None\n",
+    "pd.options.display.max_columns = None\n",
+    "\n",
+    "# Display the full DataFrame\n",
+    "print(counts)\n"
    ]
   },
   {
@@ -239,48 +307,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "94ad2871",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read federal-state-land GeoJSON\n",
-    "fed_state_land = gpd.read_file(\n",
-    "    './federal-state-singleparts.geojson'\n",
-    ").to_crs(epsg=4326)\n",
+    "# Read federal-land GeoJSON\n",
+    "fed_land = gpd.read_file(\n",
+    "    r'geojson\\USAFederalLands_Montana.geojson'\n",
+    "    ).to_crs(epsg=4326)\n",
     "\n",
     "# Intersect with all zones\n",
-    "fed_state_land_ = gpd.overlay(\n",
+    "fed_land_ = gpd.overlay(\n",
     "    combined_df,\n",
-    "    fed_state_land,\n",
+    "    fed_land,\n",
     "    how='intersection'\n",
     ")\n",
     "\n",
     "# Calculate acres\n",
-    "fed_state_land_['FedStateAcres'] = (fed_state_land_\n",
+    "fed_land_['FedAcres'] = (fed_land_\n",
     "    .to_crs(epsg=6933)\n",
     "    .geometry.area\n",
     "    .apply(m2acres)\n",
     ")\n",
     "\n",
     "# Account for repeating zone IDs\n",
-    "fed_state_land_ = (fed_state_land_\n",
-    "    .dissolve(by='id', aggfunc={'FedStateAcres': 'sum'})\n",
+    "fed_land_ = (fed_land_\n",
+    "    .dissolve(by='id', aggfunc={'FedAcres': 'sum'})\n",
     "    .reset_index()\n",
-    "    .filter(['id', 'FedStateAcres'])\n",
+    "    .filter(['id', 'FedAcres'])\n",
     ")\n",
     "\n",
     "# Add federal/state area per zoning district\n",
     "combined_df = combined_df.merge(\n",
-    "    fed_state_land_,\n",
+    "    fed_land_,\n",
     "    on='id',\n",
     "    how='left'\n",
     ")\n",
     "\n",
     "# Calculate municipal (=zoneable) acres\n",
-    "combined_df.FedStateAcres = combined_df.FedStateAcres.fillna(0)\n",
+    "combined_df.FedAcres = combined_df.FedAcres.fillna(0)\n",
     "combined_df['MunicipalAcres'] = combined_df.ZoneAcres -\\\n",
-    "    combined_df.FedStateAcres"
+    "    combined_df.FedAcres"
    ]
   },
   {
@@ -293,15 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "440a583c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spreadsheet_path = './zoning-data.csv'\n",
+    "spreadsheet_path = r'Zoning Atlas Montana.csv'\n",
     "\n",
     "zoning = pd.read_csv(spreadsheet_path)\\\n",
-    "    .loc[ :, 'State': 'Tooltip Notes' ]\n",
+    "    .loc[ :, 'Jurisdiction': 'Tooltip Notes' ]\n",
     "\n",
     "zoning['Tooltip Notes'] = zoning['Tooltip Notes'].fillna('')\n",
     "\n",
@@ -329,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "4ec9b4c4",
    "metadata": {},
    "outputs": [],
@@ -345,7 +413,7 @@
     "    if x != x or x == '': # null\n",
     "        return 'A'\n",
     "    \n",
-    "    x = float( x.split(' ')[0].split('-')[0].replace(',', '') )\n",
+    "    # x = float( x.split(' ')[0].split('-')[0].replace(',', '') )\n",
     "    \n",
     "    if x == 0:\n",
     "        return 'A'\n",
@@ -370,18 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "id": "4aa44f50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoning['AduMaxSizeLimit'] = ~zoning['ADU Max. Size (% of MAIN UNIT)'].isna() | ~zoning['ADU Max. Size (SF)'].isna()\n",
+    "zoning['AduMaxSizeLimit'] = ~zoning[r'ADU Max. Size (% of MAIN UNIT)'].isna() | ~zoning['ADU Max. Size (SF)'].isna()\n",
     "\n",
     "# Min Unit Size requirement: transform columns K, O, T, AC into true/false\n",
-    "zoning['1MUS'] = ~zoning['1-Family Min. Floor Area for the housing unit itself (not the lot) (SF)'].isna()\n",
-    "zoning['2MUS'] = ~zoning['2-Family Min. Floor Area for each housing unit (not lot size) (SF)'].isna()\n",
-    "zoning['3MUS'] = ~zoning['3-Family Min. Floor Area for each housing unit (not lot size) (SF)'].isna()\n",
-    "zoning['4MUS'] = ~zoning['4+-Family Min. Floor Area per housing unit (not lot size) (SF)'].isna()\n",
+    "zoning['1MUS'] = ~zoning['1-Family Min. Unit Size (SF)'].isna()\n",
+    "zoning['2MUS'] = ~zoning['2-Family Min. Unit Size (SF)'].isna()\n",
+    "zoning['3MUS'] = ~zoning['3-Family Min. Unit Size (SF)'].isna()\n",
+    "zoning['4MUS'] = ~zoning['4+-Family Min. Unit Size (SF)'].isna()\n",
     "\n",
     "# Any minimum unit size is set? (for tooltip)\n",
     "zoning['MUS'] = zoning['1MUS'] | zoning['2MUS'] | zoning['3MUS'] | zoning['4MUS']\n",
@@ -408,7 +476,34 @@
     "zoning['4E'] = zoning.apply(lambda row: is_elderly_only(row, '4+-Family Elderly Housing Only'), axis=1).fillna('No')\n",
     "\n",
     "# Create ADU Elderly only\n",
-    "zoning['AEld'] = zoning['ADU Elderly Only'].fillna('No')"
+    "zoning['AEld'] = zoning['ADU Elderly Housing Only'].fillna('No')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "cdcad589",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Jurisdiction', 'County', 'AbbreviatedDistrict', 'State',\n",
+       "       'Full District or Sub-District Name', 'District Mapped',\n",
+       "       'District Mapped But Extinct', 'Overlay', 'Type of Zoning District',\n",
+       "       'Affordable Housing District',\n",
+       "       ...\n",
+       "       'MUS', '1MLS', '2MLS', '3MLS', '4MLS', '1E', '2E', '3E', '4E', 'AEld'],\n",
+       "      dtype='object', length=124)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zoning.columns"
    ]
   },
   {
@@ -422,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "id": "1fc34d19",
    "metadata": {},
    "outputs": [],
@@ -469,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "7896edb9",
    "metadata": {},
    "outputs": [],
@@ -481,7 +576,7 @@
     "    suffixes=('', '_from_zoning')\n",
     ")\n",
     "\n",
-    "zoning.drop(columns=['id'], inplace=True)"
+    "# zoning.drop(columns=['id'], inplace=True)"
    ]
   },
   {
@@ -494,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "00e15cc6",
    "metadata": {},
    "outputs": [],
@@ -553,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "07fff11b",
    "metadata": {},
    "outputs": [],
@@ -574,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "id": "8d661170",
    "metadata": {},
    "outputs": [],
@@ -596,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "7eb8e838",
    "metadata": {},
    "outputs": [],
@@ -606,7 +701,7 @@
     "    \n",
     "    # Basic district info\n",
     "    'Jurisdiction': 'T',\n",
-    "    'Full District Name': 'Z',\n",
+    "    'Full District or Sub-District Name': 'Z',\n",
     "    'Type of Zoning District': 'Ty',\n",
     "    'MunicipalAcres': 'MA',\n",
     "    \n",
@@ -677,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "id": "f3086505",
    "metadata": {},
    "outputs": [],
@@ -686,8 +781,8 @@
     "    .filter( list(cols_xwalk.keys()) + ['geometry'] )\n",
     "    .rename(columns=cols_xwalk)\n",
     "    .replace( vals_xwalk )\n",
-    "    .assign(geometry=lambda df_: df_.geometry.simplify(0.00004))\n",
-    "    .to_file('./final.geojson', driver='GeoJSON')\n",
+    "    # .assign(geometry=lambda df_: df_.geometry.simplify(0.00004))\n",
+    "    .to_file(r'web-map\\data\\final.geojson', driver='GeoJSON')\n",
     ")"
    ]
   },
@@ -702,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9e95b0fb",
    "metadata": {},
    "outputs": [],
@@ -724,7 +819,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mtAtlas",
+   "display_name": "mtAtlasEnv",
    "language": "python",
    "name": "python3"
   },
@@ -742,7 +837,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1a6d60c32e231a51dbcc3cdbf3f8d35e625e2d69fb6d626b8a7678036aa66730"
+    "hash": "9e4f988564fa76bfb1b7ecd31ba998d861b57ef9720356b8ec3df795ae698aa7"
    }
   }
  },
