fix filters, tooltip word wrapping, data issues

--- a/CombineJurisdictions.ipynb
+++ b/CombineJurisdictions.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "id": "e4163a92",
    "metadata": {},
    "outputs": [],
@@ -97,8 +97,8 @@
     "\n",
     "        return gdf\n",
     "               \n",
-    "    except:\n",
-    "        print(f\"Error when reading {filepath}.\")"
+    "    except Exception as e:\n",
+    "        print(f\"Error when reading {filepath}: {e}\")"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 150,
    "id": "9f59a39d",
    "metadata": {},
    "outputs": [
@@ -119,110 +119,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error when reading geojson/FederalLandsDissolve.geojson.\n",
-      "Error when reading geojson/Great_Falls.geojson.\n",
-      "Error when reading geojson/MontanaBoundary.geojson.\n",
-      "Error when reading geojson/USAFederalLands_Montana.geojson.\n"
+      "Error when reading geojson/FederalLandsDissolve.geojson: 'GeoDataFrame' object has no attribute 'AbbreviatedDistrict'\n",
+      "Error when reading geojson/MontanaBoundary.geojson: 'GeoDataFrame' object has no attribute 'AbbreviatedDistrict'\n",
+      "Error when reading geojson/USAFederalLands_Montana.geojson: 'GeoDataFrame' object has no attribute 'AbbreviatedDistrict'\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Jurisdiction</th>\n",
-       "      <th>AbbreviatedDistrict</th>\n",
-       "      <th>ZoneAcres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MT--BELGRADE--AS</td>\n",
-       "      <td>POLYGON ((-111.19625 45.77289, -111.19650 45.7...</td>\n",
-       "      <td>MT</td>\n",
-       "      <td>Belgrade</td>\n",
-       "      <td>AS</td>\n",
-       "      <td>337.729046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MT--BELGRADE--B1</td>\n",
-       "      <td>POLYGON ((-111.20621 45.81668, -111.20621 45.8...</td>\n",
-       "      <td>MT</td>\n",
-       "      <td>Belgrade</td>\n",
-       "      <td>B1</td>\n",
-       "      <td>40.907999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MT--BELGRADE--B2</td>\n",
-       "      <td>MULTIPOLYGON (((-111.16845 45.76275, -111.1673...</td>\n",
-       "      <td>MT</td>\n",
-       "      <td>Belgrade</td>\n",
-       "      <td>B2</td>\n",
-       "      <td>876.041993</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MT--BELGRADE--B3</td>\n",
-       "      <td>MULTIPOLYGON (((-111.18118 45.77313, -111.1813...</td>\n",
-       "      <td>MT</td>\n",
-       "      <td>Belgrade</td>\n",
-       "      <td>B3</td>\n",
-       "      <td>61.434842</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MT--BELGRADE--BP</td>\n",
-       "      <td>POLYGON ((-111.18552 45.79672, -111.18552 45.7...</td>\n",
-       "      <td>MT</td>\n",
-       "      <td>Belgrade</td>\n",
-       "      <td>BP</td>\n",
-       "      <td>59.887856</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 id                                           geometry State  \\\n",
-       "0  MT--BELGRADE--AS  POLYGON ((-111.19625 45.77289, -111.19650 45.7...    MT   \n",
-       "1  MT--BELGRADE--B1  POLYGON ((-111.20621 45.81668, -111.20621 45.8...    MT   \n",
-       "2  MT--BELGRADE--B2  MULTIPOLYGON (((-111.16845 45.76275, -111.1673...    MT   \n",
-       "3  MT--BELGRADE--B3  MULTIPOLYGON (((-111.18118 45.77313, -111.1813...    MT   \n",
-       "4  MT--BELGRADE--BP  POLYGON ((-111.18552 45.79672, -111.18552 45.7...    MT   \n",
-       "\n",
-       "  Jurisdiction AbbreviatedDistrict   ZoneAcres  \n",
-       "0     Belgrade                  AS  337.729046  \n",
-       "1     Belgrade                  B1   40.907999  \n",
-       "2     Belgrade                  B2  876.041993  \n",
-       "3     Belgrade                  B3   61.434842  \n",
-       "4     Belgrade                  BP   59.887856  "
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -238,22 +138,22 @@
     "\n",
     "combined_df = pd.concat( gdfs ).reset_index(drop=True)\n",
     "\n",
-    "combined_df.head()"
+    "# combined_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "id": "5c523e9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(552, 6)"
+       "(538, 6)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,12 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "id": "1ec30b47",
    "metadata": {},
    "outputs": [],
    "source": [
     "counts = combined_df.groupby('Jurisdiction').size()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "d0da0073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts.to_csv('counts.csv')"
    ]
   },
   {
@@ -307,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 151,
    "id": "94ad2871",
    "metadata": {},
    "outputs": [],
@@ -361,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 144,
    "id": "440a583c",
    "metadata": {},
    "outputs": [],
@@ -397,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "id": "4ec9b4c4",
    "metadata": {},
    "outputs": [],
@@ -438,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 145,
    "id": "4aa44f50",
    "metadata": {},
    "outputs": [],
@@ -481,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "cdcad589",
    "metadata": {},
    "outputs": [
@@ -497,7 +407,7 @@
        "      dtype='object', length=124)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 146,
    "id": "1fc34d19",
    "metadata": {},
    "outputs": [],
@@ -564,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 152,
    "id": "7896edb9",
    "metadata": {},
    "outputs": [],
@@ -669,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 153,
    "id": "8d661170",
    "metadata": {},
    "outputs": [],
@@ -691,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "id": "7eb8e838",
    "metadata": {},
    "outputs": [],
@@ -706,10 +616,10 @@
     "    'MunicipalAcres': 'MA',\n",
     "    \n",
     "    # Type of homes allowed\n",
-    "    '1-Family': '1F',\n",
-    "    '2-Family': '2F',\n",
-    "    '3-Family': '3F',\n",
-    "    '4+-Family': '4F',\n",
+    "    '1-Family Treatment': '1F',\n",
+    "    '2-Family Treatment': '2F',\n",
+    "    '3-Family Treatment': '3F',\n",
+    "    '4+-Family Treatment': '4F',\n",
     "    'Accessory Dwelling Unit (ADU)': 'AD',\n",
     "    \n",
     "    # Elderly housing\n",
@@ -750,8 +660,9 @@
     "# Values to shorten\n",
     "vals_xwalk = {\n",
     "    'Allowed/Conditional': 'A',\n",
-    "    'Special Permit': 'AH',\n",
+    "    'Public Hearing': 'AH',\n",
     "    'Prohibited': 'N',\n",
+    "    'Overlay': 'O',\n",
     "    \n",
     "    'Primarily Residential': 'R',\n",
     "    'Mixed with Residential': 'M',\n",
@@ -772,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 154,
    "id": "f3086505",
    "metadata": {},
    "outputs": [],
@@ -784,6 +695,17 @@
     "    # .assign(geometry=lambda df_: df_.geometry.simplify(0.00004))\n",
     "    .to_file(r'web-map\\data\\final.geojson', driver='GeoJSON')\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "19425254",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the zoning data to a csv\n",
+    "combined_df.to_csv(r'final.csv', index=False)"
    ]
   },
   {
