--- a/CombineJurisdictions.ipynb
+++ b/CombineJurisdictions.ipynb
@@ -446,27 +446,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 182,
-   "id": "023e8d61",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('id', dtype('O')), ('geometry', <geopandas.array.GeometryDtype object at 0x0000018296F4EBC0>), ('State', dtype('O')), ('Jurisdiction', dtype('O')), ('AbbreviatedDistrict', dtype('O')), ('ZoneAcres', dtype('float64')), ('FedAcres', dtype('float64')), ('MunicipalAcres', dtype('float64')), ('Jurisdiction_from_zoning', dtype('O')), ('County', dtype('O')), ('AbbreviatedDistrict_from_zoning', dtype('O')), ('State_from_zoning', dtype('O')), ('Full District or Sub-District Name', dtype('O')), ('District Mapped', dtype('O')), ('District Mapped But Extinct', dtype('O')), ('Overlay', dtype('O')), ('Type of Zoning District', dtype('O')), ('Affordable Housing District', dtype('O')), ('Elderly Housing District', dtype('O')), ('1-Family Treatment', dtype('O')), ('2-Family Treatment', dtype('O')), ('3-Family Treatment', dtype('O')), ('4+-Family Treatment', dtype('O')), ('1-Family Min. Lot (ACRES)', dtype('float64')), ('1-Family Front Setback (# of feet)', dtype('float64')), ('1-Family Side Setback (# of feet)', dtype('float64')), ('1-Family Rear Setback (# of feet)', dtype('float64')), ('1-Family Max. Lot Coverage - Buildings (%)', dtype('O')), ('1-Family Max. Lot Coverage - Buildings & Impervious Surface (%)', dtype('float64')), ('1-Family Min. # Parking Spaces', dtype('float64')), ('1-Family Max. Height (# of stories)', dtype('float64')), ('1-Family Max. Height (# of feet)', dtype('float64')), ('1-Family Floor to Area Ratio', dtype('O')), ('1-Family Min. Unit Size (SF)', dtype('float64')), ('2-Family Affordable Housing Only', dtype('O')), ('2-Family Elderly Housing Only', dtype('O')), ('2-Family Min. Lot (ACRES)', dtype('float64')), ('2-Family Max. Density (UNITS/ACRE)', dtype('float64')), ('2-Family Front Setback (# of feet)', dtype('O')), ('2-Family Side Setback (# of feet)', dtype('float64')), ('2-Family Rear Setback (# of feet)', dtype('float64')), ('2-Family Max. Lot Coverage - Buildings (%)', dtype('O')), ('2-Family Max. Lot Coverage - Buildings & Impervious Surface (%)', dtype('float64')), ('2-Family Min. # Parking Spaces Per Studio or 1BR', dtype('float64')), ('2-Family Min. # Parking Spaces Per 2+ BR', dtype('float64')), ('2-Family Max. Height (# of stories)', dtype('float64')), ('2-Family Max. Height (# of feet)', dtype('float64')), ('2-Family Floor to Area Ratio', dtype('O')), ('2-Family Min. Unit Size (SF)', dtype('float64')), ('3-Family Affordable Housing Only', dtype('O')), ('3-Family Elderly Housing Only', dtype('O')), ('3-Family Min. Lot (ACRES)', dtype('float64')), ('3-Family Max. Density (UNITS/ACRE)', dtype('float64')), ('3-Family Front Setback (# of feet)', dtype('O')), ('3-Family Side Setback (# of feet)', dtype('float64')), ('3-Family Rear Setback (# of feet)', dtype('float64')), ('3-Family Max. Lot Coverage - Buildings (%)', dtype('O')), ('3-Family Max. Lot Coverage - Buildings & Impervious Surface (%)', dtype('float64')), ('3-Family Min. # Parking Spaces Per Studio or 1BR', dtype('float64')), ('3-Family Min. # Parking Spaces Per 2+ BR', dtype('float64')), ('3-Family Connection to Sewer and/or Water Required', dtype('O')), ('3-Family Connection or Proximity to Public Transit Required', dtype('O')), ('3-Family Max. Height (# of stories)', dtype('float64')), ('3-Family Max. Height (# of feet)', dtype('float64')), ('3-Family Floor to Area Ratio', dtype('O')), ('3-Family Min. Unit Size (SF)', dtype('float64')), ('3-Family Max. # Bedrooms Per Unit', dtype('float64')), ('4+-Family Affordable Housing Only', dtype('O')), ('4+-Family Elderly Housing Only', dtype('O')), ('4+-Family Min. Lot (ACRES)', dtype('float64')), ('4+-Family Max. Density (UNITS/ACRE)', dtype('float64')), ('4+-Family Front Setback (# of feet)', dtype('O')), ('4+-Family Side Setback (# of feet)', dtype('float64')), ('4+-Family Rear Setback (# of feet)', dtype('float64')), ('4+-Family Max. Lot Coverage - Buildings (%)', dtype('O')), ('4+-Family Max. Lot Coverage - Buildings & Impervious Surface (%)', dtype('float64')), ('4+-Family Min. # Parking Spaces Per Studio or 1BR', dtype('float64')), ('4+-Family Min. # Parking Spaces Per 2+ BR', dtype('float64')), ('4+-Family Connection to Sewer and/or Water Required', dtype('O')), ('4+-Family Connection or Proximity to Public Transit Required', dtype('O')), ('4+-Family Max. Height (# of stories)', dtype('float64')), ('4+-Family Max. Height (# of feet)', dtype('float64')), ('4+-Family Floor to Area Ratio', dtype('O')), ('4+-Family Min. Unit Size (SF)', dtype('float64')), ('4+-Family Max. # Bedrooms Per Unit', dtype('float64')), ('4+-Family Max. # Units Per Building', dtype('float64')), ('Affordable Housing (AH) Treatment', dtype('O')), ('AH - Definition', dtype('O')), ('AH - Elderly Housing Only', dtype('O')), ('AH Min. Lot (ACRES)', dtype('float64')), ('AH Max. Density (UNITS/ACRE)', dtype('float64')), ('AH Min. # Parking Spaces Per Studio or 1BR', dtype('float64')), ('AH Min. # Parking Spaces Per 2+ BR', dtype('float64')), ('AH Connection to Sewer and/or Water Required', dtype('O')), ('AH Connection or Proximity to Public Transit Required', dtype('O')), ('AH Min. Unit Size (SF)', dtype('float64')), ('AH Max. # Bedrooms Per Unit', dtype('float64')), ('AH Max. # Units Per  Building', dtype('float64')), ('Accessory Dwelling Unit (ADU) Treatment', dtype('O')), ('ADU Employee or Family Occupancy Required', dtype('O')), ('ADU Renter Occupancy Prohibited', dtype('O')), ('ADU Owner Occupancy Required', dtype('O')), ('ADU Elderly Housing Only', dtype('O')), ('ADU Min. Lot (acres)', dtype('float64')), ('ADU Min. # Parking Spaces (Additional to Main Unit)', dtype('float64')), ('ADU Restricted to Only Primary Structure (i.e., No Outbuildings like Garages)', dtype('O')), ('ADU Max. Size (% of MAIN UNIT)', dtype('float64')), ('ADU Max. Size (SF)', dtype('float64')), ('ADU Max. # Bedrooms Per Unit', dtype('float64')), ('Planned Residential Development (PRD) Treatment', dtype('O')), ('Mobile or Manufactured Home Park (Y/N)', dtype('O')), ('PRD Min. Lot (Acres)', dtype('float64')), ('PRD Max. Density (Units/Acre)', dtype('float64')), ('PRD Max. # Units Per Development', dtype('float64')), ('Special Notes', dtype('O')), ('Tooltip Notes', dtype('O')), ('AduMaxSizeLimit', dtype('O')), ('1MUS', dtype('O')), ('2MUS', dtype('O')), ('3MUS', dtype('O')), ('4MUS', dtype('O')), ('MUS', dtype('O')), ('1MLS', dtype('O')), ('2MLS', dtype('O')), ('3MLS', dtype('O')), ('4MLS', dtype('O')), ('1E', dtype('O')), ('2E', dtype('O')), ('3E', dtype('O')), ('4E', dtype('O')), ('AEld', dtype('O')), ('PK', dtype('O')), ('Full District Name', dtype('O'))]\n"
-     ]
-    }
-   ],
-   "source": [
-    "column_types = final.dtypes.to_dict()\n",
-    "column_type_list = list(column_types.items())\n",
-    "\n",
-    "print(column_type_list)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3058ef5b",
    "metadata": {},
@@ -578,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 224,
    "id": "7eb8e838",
    "metadata": {},
    "outputs": [],
@@ -597,7 +576,7 @@
     "    '2-Family Treatment': '2F',\n",
     "    '3-Family Treatment': '3F',\n",
     "    '4+-Family Treatment': '4F',\n",
-    "    'Accessory Dwelling Unit (ADU)': 'AD',\n",
+    "    'Accessory Dwelling Unit (ADU) Treatment': 'AD',\n",
     "    \n",
     "    # Elderly housing\n",
     "    '1E': '1E',\n",
@@ -619,8 +598,13 @@
     "    '4MLS': '4MLS',\n",
     "    \n",
     "    # Affordable/Elderly only\n",
-    "    'Affordable Housing District': 'AHD',\n",
+    "    'Affordable Housing (AH) Treatment': 'AHT',\n",
+    "    'AH - Definition': 'AHD',\n",
     "    'Elderly Housing District': 'EHD',\n",
+    "\n",
+    "    # Planned Residential Development (PRD)\n",
+    "    'Planned Residential Development (PRD) Treatment': 'PRD',\n",
+    "    'Mobile or Manufactured Home Park (Y/N)': 'MHP',\n",
     "    \n",
     "    # Accessory Dwelling Units restrictions\n",
     "    'ADU Restricted to ONLY Primary Structure (i.e., No Outbuildings like Garages)': 'APrim',\n",
@@ -640,6 +624,7 @@
     "    'Public Hearing': 'AH',\n",
     "    'Prohibited': 'N',\n",
     "    'Overlay': 'O',\n",
+    "    'Not Mentioned': 'NM',\n",
     "    \n",
     "    'Primarily Residential': 'R',\n",
     "    'Mixed with Residential': 'M',\n",
@@ -660,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 225,
    "id": "f3086505",
    "metadata": {},
    "outputs": [],
