--- a/CombineJurisdictions.ipynb
+++ b/CombineJurisdictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dc235dfe",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2818b12b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "id": "e4163a92",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "id": "9f59a39d",
    "metadata": {},
    "outputs": [
@@ -141,32 +141,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "1ec30b47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counts = combined_df.groupby('Jurisdiction').size()\n",
-    "counts.to_csv('counts.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "407c8790",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set the maximum number of rows and columns to display\n",
-    "pd.options.display.max_rows = None\n",
-    "pd.options.display.max_columns = None\n",
-    "\n",
-    "# Display the full DataFrame\n",
-    "print(counts)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "efe535d0",
    "metadata": {},
@@ -176,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "id": "94ad2871",
    "metadata": {},
    "outputs": [],
@@ -230,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 95,
    "id": "440a583c",
    "metadata": {},
    "outputs": [],
@@ -266,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "id": "4ec9b4c4",
    "metadata": {},
    "outputs": [],
@@ -304,12 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 96,
    "id": "4aa44f50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoning['AduMaxSizeLimit'] = ~zoning[r'ADU Max. Size (% of MAIN UNIT)'].isna() | ~zoning['ADU Max. Size (SF)'].isna()\n",
+    "zoning['AduMaxSizeLimit'] = ~zoning[r'ADU Max. Size (% of Main Unit)'].isna() | ~zoning['ADU Max. Size (SF)'].isna()\n",
     "\n",
     "# Min Unit Size requirement: transform columns K, O, T, AC into true/false\n",
     "zoning['1MUS'] = ~zoning['1-Family Min. Unit Size (SF)'].isna()\n",
@@ -347,43 +321,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "cdcad589",
+   "execution_count": 15,
+   "id": "2990f566",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Jurisdiction', 'County', 'AbbreviatedDistrict', 'State',\n",
-       "       'Full District or Sub-District Name', 'District Mapped',\n",
-       "       'District Mapped But Extinct', 'Overlay', 'Type of Zoning District',\n",
-       "       'Affordable Housing District',\n",
-       "       ...\n",
-       "       'MUS', '1MLS', '2MLS', '3MLS', '4MLS', '1E', '2E', '3E', '4E', 'AEld'],\n",
-       "      dtype='object', length=124)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zoning.columns"
+    "# defines a function to round max height to the nearest height category\n",
+    "def max_height(x):\n",
+    "    if x != x or x == '': # null\n",
+    "        return 'NA'\n",
+    "\n",
+    "    x = float(x)\n",
+    "\n",
+    "    if x < 1:\n",
+    "        return 'NA'\n",
+    "    if x >= 1 and x < 2:\n",
+    "        return 'A'\n",
+    "    if x >= 2 and x < 3:\n",
+    "        return 'B'\n",
+    "    if x >= 3 and x < 4:\n",
+    "        return 'C'\n",
+    "    if x >= 4 and x < 5:\n",
+    "        return 'D'\n",
+    "    if x >= 5:\n",
+    "        return 'E'\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "a472941b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new column for max height in each category\n",
+    "zoning['1MH'] = zoning['1-Family Max. Height (# of stories)'].apply(max_height)\n",
+    "zoning['2MH'] = zoning['2-Family Max. Height (# of stories)'].apply(max_height)\n",
+    "zoning['3MH'] = zoning['3-Family Max. Height (# of stories)'].apply(max_height)\n",
+    "zoning['4MH'] = zoning['4+-Family Max. Height (# of stories)'].apply(max_height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "b4e8b55f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add an attribute that identifies if a treatment is only available for affordable/income restricted housing\n",
+    "\n",
+    "# Create new columns called \"2AHO\", \"3AHO\", and \"4AHO\" and initialize them to \"No\" for all rows\n",
+    "zoning[\"2AHO\"] = \"No\"\n",
+    "zoning[\"3AHO\"] = \"No\"\n",
+    "zoning[\"4AHO\"] = \"No\"\n",
+    "\n",
+    "# Set the value in the \"2AHO\" column to \"Yes\" for all rows where the value in the \"2-Family Affordable Housing Only\" column is \"Yes\"\n",
+    "zoning.loc[zoning[\"2-Family Affordable Housing Only\"] == \"Yes\", \"2AHO\"] = \"Yes\"\n",
+    "\n",
+    "# Set the value in the \"3AHO\" column to \"Yes\" for all rows where the value in the \"3-Family Affordable Housing Only\" column is \"Yes\"\n",
+    "zoning.loc[zoning[\"3-Family Affordable Housing Only\"] == \"Yes\", \"3AHO\"] = \"Yes\"\n",
+    "\n",
+    "# Set the value in the \"4AHO\" column to \"Yes\" for all rows where the value in the \"4+-Family Affordable Housing Only\" column is \"Yes\"\n",
+    "zoning.loc[zoning[\"4+-Family Affordable Housing Only\"] == \"Yes\", \"4AHO\"] = \"Yes\""
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fcab4243",
    "metadata": {},
    "source": [
     "### Generate text for minimum parking requirements\n",
-    "This was needed for Connecticut Zoning Atals and may be optional for other atlases."
+    "This was needed for Connecticut Zoning Atlas and may be optional for other atlases."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 27,
    "id": "1fc34d19",
    "metadata": {},
    "outputs": [],
@@ -415,8 +429,16 @@
     "    if four_ == four_:\n",
     "        text.append(str(four_) + ' for 2+ family (per studio/1br)')\n",
     "\n",
-    "    return '; '.join(text)\n",
-    "\n",
+    "    return '; '.join(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "8b4f823d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "zoning['PK'] = zoning.apply(parking_text, axis=1)"
    ]
   },
@@ -430,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 100,
    "id": "7896edb9",
    "metadata": {},
    "outputs": [],
@@ -535,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 101,
    "id": "8d661170",
    "metadata": {},
    "outputs": [],
@@ -557,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 102,
    "id": "7eb8e838",
    "metadata": {},
    "outputs": [],
@@ -596,6 +618,12 @@
     "    '2MLS': '2MLS',\n",
     "    '3MLS': '3MLS',\n",
     "    '4MLS': '4MLS',\n",
+    "\n",
+    "    # Max Height Requirement\n",
+    "    '1MH': '1MH',\n",
+    "    '2MH': '2MH',\n",
+    "    '3MH': '3MH',\n",
+    "    '4MH': '4MH',\n",
     "    \n",
     "    # Affordable/Elderly only\n",
     "    'Affordable Housing (AH) Treatment': 'AHT',\n",
@@ -616,6 +644,14 @@
     "    \n",
     "    # Tooltip notes\n",
     "    'Tooltip Notes': 'TN',\n",
+    "\n",
+    "    # Affordable Housing Only\n",
+    "    '2AHO': '2AHO',\n",
+    "    '3AHO': '3AHO',\n",
+    "    '4AHO': '4AHO',\n",
+    "\n",
+    "    # Overlay Districts\n",
+    "    'Overlay': 'O',\n",
     "}\n",
     "\n",
     "# Values to shorten\n",
@@ -645,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 103,
    "id": "f3086505",
    "metadata": {},
    "outputs": [],
@@ -681,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 262,
    "id": "9e95b0fb",
    "metadata": {},
    "outputs": [],
@@ -1595,7 +1631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
